kube/grafana-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: riley
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:9.4.7
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources/datasources.yml
          subPath: grafana-datasources.yml
      volumes:
      - name: datasources
        configMap:
          name: grafana-datasource-config
