kube/loki-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: riley
  name: loki-deployment
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: otel/opentelemetry-collector-contrib
        ports:
        - containerPort: 3100
        command: [/etc/loki/local-config.yaml]
