kube/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: riley
  name: thederpening-deployment
  labels:
    app: thederpening
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thederpening
  template:
    metadata:
      labels:
        app: thederpening
    spec:
      containers:
      - name: thederpening
        image: 144.17.92.12:5000/riley/thederpening:$GITHUB_RUN_ID
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        redinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
