kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: riley
  name: thederpeningapi-service
spec:
  type: ClusterIP
  selector:
    app: thederpeningapi
  ports:
    - port: 80
      targetPort: 8080
