kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: riley
  name: grafana-service
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
